# open-recombinhunt

./: .dockerignore  .gitignore  Dockerfile  Dockerfile_base  Dockerfile_frontend  Dockerfile_pipeline  README.md  docker-compose.yaml  environment.yml  old-open-recombinhunt-README.md  requirements.txt
.streamlit/: config.toml
app/: about_virus.py  country.csv  streamlit_app.py
config/: config.yaml
libs/haplocov/: addToTableNCBI.pl  augmentClusters.pl  computeDefining.pl  pipeline.sh
libs/recombinhunt-cov-7.0.0/: pyproject.toml
libs/recombinhunt-cov-7.0.0/src/recombinhunt.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
libs/recombinhunt-cov-7.0.0/src/recombinhunt/core/: environment.py
libs/recombinhunt-cov-7.0.0/src/recombinhunt/validation/: case_analysis.py  utils.py
src/00_master/: pipeline.py
src/01_data_acquisition/: fetch_data.py
src/03_haplocov/: run_haplocov.py
src/04_postprocessing/: format_covid_variations.py  format_haplocov_variations.py
src/05_prepare_recombinhunt/: create_environment.py  create_samples.py
src/06_recombinhunt/: run_recombinhunt.py
src/analyse/: check_env_files.influenza.txt  check_env_files.ipynb  check_env_files.monkeypox.txt  check_env_files.rsv-a.txt  check_env_files.rsv-b.txt  check_env_files.yellow-fever.txt  check_env_files.zika.txt  column_check_influenza_FTP.ipynb  count_1bp_2bp.py  decide_quality_filters_influenza.ipynb  decide_quality_filters_monkeypox.ipynb  decide_quality_filters_rsv-a.ipynb  decide_quality_filters_rsv-b.ipynb  decide_quality_filters_yellow-fever.ipynb  (+4 more)
src/utils/: utils.py  (+1 more)
(+40618 files in other folders)
