[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[project]
name = "recombinhunt"
version = "7.0.0"

dependencies = [
    "numpy==1.26.0",
    "pandas==2.1.1",
    "plotly==5.17.0",
    "tqdm==4.67.1",
    "inflect==7.0.0",
    "tabulate==0.9.0",
    "kaleido==0.2.1",
    "jupyter==1.0.0",
    "fastjsonschema==2.20.0",
    "pyarrow==17.0.0"
]
